<resources>
    <string name="app_name">ImageClassification</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">click to register</string>
    <string name="logout">logout</string>
    <string name="joined_us_before_login">Joined us before? Login</string>
</resources>