<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".registerActivity">

<!--    <ImageView-->
<!--        android:id="@+id/signup"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="-170dp"-->
<!--        android:layout_marginBottom="-35dp"-->
<!--         />-->

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="30dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/third_green"
                android:textSize="36sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/third_green"
                app:boxStrokeColor="@color/second_green"
                app:hintTextColor="@color/second_green">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@drawable/ic_baseline_email_24"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/third_green"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/third_green"
                app:boxStrokeColor="@color/second_green"
                app:hintTextColor="@color/second_green">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/third_green"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/third_green"
                android:text="@string/register"
                android:textColor="@color/white"
                app:cornerRadius="6dp" />

            <TextView
                android:id="@+id/loginNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="@string/joined_us_before_login"
                android:textColor="#0065ff"
                android:textSize="15sp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>